--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "bootstrap": "4.5.0",
     "bootstrap-vue": "2.15.0",
     "express": "^4.17.1",
+    "moment": "2.27.0",
+    "pouchdb": "7.2.2",
+    "uuid": "8.3.0",
     "vue-router": "^3.2.0",
     "vue-select": "3.10.7",
     "vue2-datepicker": "3.6.1",
