--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "express": "^4.17.1",
     "moment": "2.27.0",
     "pouchdb": "7.2.2",
+    "pouchdb-find": "7.2.2",
+    "relational-pouch": "4.0.0",
     "uuid": "8.3.0",
     "vue-router": "^3.2.0",
     "vue-select": "3.10.7",
